--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo App: projects</title>
+    <link rel="stylesheet" href="https://igoradamenko.com/awsm.css/v2/css/awsm.min.css">
 </head>
 <body>
 
