Template and controller connection

--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="https://igoradamenko.com/awsm.css/v2/css/awsm.min.css">
 </head>
 <body>
+<main>
+    <fieldset>
+        <legend>Nowy projekt</legend>
+    </fieldset>
+</main>
 
 </body>
 </html>
