--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -8,11 +8,12 @@
 </head>
 <body>
 <main>
-    <form action="#" method="post" th:action="@{/projects}">
+    <!--/*@thymesVar id="project" type="io.github.xwasu.model.projection.ProjectWriteModel"*/-->
+    <form action="#" method="post" th:action="@{/projects}" th:object="${project}">
         <fieldset>
             <legend>Nowy projekt</legend>
             <label>Opis
-                <input type="text" />
+                <input type="text" th:field="*{description}"/>
             </label>
         </fieldset>
     </form>
