Recording via form, th:if

--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <main>
+    <h1 th:if="${message != null}" th:text="${message}"></h1>
     <!--/*@thymesVar id="project" type="io.github.xwasu.model.projection.ProjectWriteModel"*/-->
     <form action="#" method="post" th:action="@{/projects}" th:object="${project}">
         <fieldset>
