HTML project list (dl dt dd tags)

--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -9,6 +9,15 @@
 <body>
 <main>
     <h1 th:if="${message != null}" th:text="${message}"></h1>
+    <!--/*@thymesVar id="projects" type="java.util.List<io.github.xwasu.model.Project>"*/-->
+    <dl th:each="project : ${projects}">
+        <dt th:text="${project.description}">...</dt>
+        <dd>
+            <ul>
+                <li th:each="step : ${project.steps}" th:text="|${step.description} (${step.daysToDeadline} dni)|"></li>
+            </ul>
+        </dd>
+    </dl>
     <!--/*@thymesVar id="project" type="io.github.xwasu.model.projection.ProjectWriteModel"*/-->
     <form action="#" method="post" th:action="@{/projects}" th:object="${project}">
         <fieldset>
