--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -5,23 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo App: projects</title>
     <link rel="stylesheet" href="https://igoradamenko.com/awsm.css/v2/css/awsm.min.css">
+    <style>
+        .Bd {
+            border: solid 1px black;
+        }
+
+        .P\(0\) {
+            padding: 0;
+        }
+
+        .P\(10px\) {
+            padding: 10px;
+        }
+    </style>
 </head>
 <body>
 <main>
     <h1 th:if="${message != null}" th:text="${message}"></h1>
     <!--/*@thymesVar id="projects" type="java.util.List<io.github.xwasu.model.Project>"*/-->
-    <dl th:each="project : ${projects}">
+    <dl th:each="project : ${projects}" class="Bd P(10px)">
         <dt th:text="${project.description}">...</dt>
         <dd>
-            <ul>
+            <ul class="P(0)">
                 <li th:each="step : ${project.steps}" th:text="|${step.description} (${step.daysToDeadline} dni)|"></li>
             </ul>
         </dd>
     </dl>
-    <!--/*@thymesVar id="project" type="io.github.xwasu.model.projection.ProjectWriteModel"*/-->
-    <form action="#" method="post" th:action="@{/projects}" th:object="${project}">
-        <fieldset>
-            <legend>Nowy projekt</legend>
+    <fieldset>
+        <legend>Nowy projekt</legend>
+        <!--/*@thymesVar id="project" type="io.github.xwasu.model.projection.ProjectWriteModel"*/-->
+        <form action="#" method="post" th:action="@{/projects}" th:object="${project}">
             <label>Opis
                 <input type="text" th:field="*{description}"/>
             </label>
@@ -37,12 +50,12 @@
             <div>
                 <button type="submit" name="addStep">+</button>
             </div>
-        </fieldset>
-        <p>
-            <button type="submit">Dodaj</button>
-            <button type="reset">Wyczyść</button>
-        </p>
-    </form>
+            <p>
+                <button type="submit">Dodaj</button>
+                <button type="reset">Wyczyść</button>
+            </p>
+        </form>
+    </fieldset>
 </main>
 
 </body>
